# helium-onboarding-win

./: .gitignore  BUILD.gn  generate-package-tarball.sh  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
public/browser-icons/: COPYRIGHT
src/: App.svelte  app.css  main.ts  vite-env.d.ts
src/components/: ButtonLink.svelte  CircleCheckbox.svelte  DefaultBrowserOption.svelte  PageHeader.svelte  PageNavigation.svelte  ProfileImportOption.svelte  SearchEngineItem.svelte  Toggle.svelte  ToggleSeparator.svelte
src/icons/: HeliumLogo.svelte
src/icons/tabler/: IconArrowLeft.svelte  IconArrowRight.svelte  IconCheck.svelte  IconExternalLink.svelte  IconHeart.svelte  IconPlaneArrival.svelte  IconTransferIn.svelte  IconWorld.svelte  IconWorldHeart.svelte
src/lib/: browser.ts  chrome-send-polyfill.ts  onboarding-flow.ts  strings.ts
src/lib/browser/: importer.ts  index.ts  is-default.ts  prefs.ts  profile.ts  search-engines.ts
src/lib/cr/: assert.ts  cr.d.ts  cr.ts  default_browser_browser_proxy.ts  import_data_browser_proxy.ts  index.ts  promise_resolver.ts  search_engines_browser_proxy.ts
src/pages/: DataImport.svelte  DefaultBrowser.svelte  Finish.svelte  HeliumServices.svelte  SearchEngine.svelte  Welcome.svelte
util/: generate-grd.mjs  generate-grd.mts  generate-package-tarball.sh
